product part taxon

--- a/app/views/factory/productions/_base/_product_part_taxon.html.erb
+++ b/app/views/factory/productions/_base/_product_part_taxon.html.erb
@@ -7,11 +7,11 @@
   </div>
   <div class="pt-4" data-controller="custom" data-custom-only-value="<%= product_part_taxon.only_one? %>">
   <% product_parts.each do |product_part| %>
-    <label class="button is-small mb-2 <%= @production.part_ids.include?(product_part.part_id) ? 'is-success' : 'is-light' %>" for="part_<%= product_part.part_id %>"<%= @production.disabled?(part) ? ' disabled' : '' %>>
+    <label class="button is-small mb-2 <%= @production.part_ids.include?(product_part.part_id) ? 'is-success' : 'is-light' %>" for="part_<%= product_part.part_id %>"<%= @production.disabled?(product_part.part_id) ? ' disabled' : '' %>>
       <span><%= product_part.part.name %></span>
       <span class="weui-btn__extra"><%= product_part.part.price.to_money.format.html_safe %></span>
-      <%= hidden_field_tag 'part_ids[]', product_part.part_id, form: 'edit_custom', data: { part_taxon_id: product_part.part.product_taxon_id }, id: nil if @production.part_ids.include?(part.id) && @production.disabled?(part) %>
-      <%= check_box_tag 'part_ids[]', product_part.part_id, @production.part_ids.include?(product_part.part_id), disabled: @production.disabled?(part), data: { action: 'custom#toggle', part_taxon_id: part.product_taxon_id }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
+      <%= hidden_field_tag 'part_ids[]', product_part.part_id, form: 'edit_custom', data: { part_taxon_id: product_part.part.product_taxon_id }, id: nil if @production.part_ids.include?(product_part.part_id) && @production.disabled?(product_part.part_id) %>
+      <%= check_box_tag 'part_ids[]', product_part.part_id, @production.part_ids.include?(product_part.part_id), disabled: @production.disabled?(product_part.part_id), data: { action: 'custom#toggle', part_taxon_id: product_part_taxon.part_taxon_id }, class: 'weui-check', id: "part_#{product_part.part_id}", form: 'edit_custom' %>
     </label>
   <% end %>
   </div>
