--- a/app/views/factory/productions/_dialog_form.html.erb
+++ b/app/views/factory/productions/_dialog_form.html.erb
@@ -1,5 +1,4 @@
-<%= form_with model: @production, url: { controller: '/factory/productions', action: 'create_dialog' }, method: :post, data: { turbo_scroll: true }, id: 'edit_custom' do |f| %>
-  <%= f.hidden_field :product_id %>
+<%= form_with model: @production, url: { action: 'create_dialog' }, id: 'edit_custom' do |f| %>
 <% end %>
 <%# render 'factory/productions/_base/figure' if @production.product.covers.length > 0 %>
 <div class="box is-shadowless has-background-transparent has-text-bold mb-0">
