--- a/app/views/factory/admin/products/_form.html.erb
+++ b/app/views/factory/admin/products/_form.html.erb
@@ -4,6 +4,7 @@
 <%= render 'com/attachments/list_field', target: f.object.covers, f: f %>
 <%= render 'com/attachments/list_field', target: f.object.images, f: f %>
 <%= f.text_area :description %>
+<%= f.number_field :base_price %>
 <%= f.fields :product_hosts do |ef| %>
   <%= ef.number_field :profit_margin, step: 0.01 %>
   <%= ef.hidden_field :organ_id, value: current_organ.id %>
