--- a/app/views/factory/productions/create_dialog.turbo_stream.erb
+++ b/app/views/factory/productions/create_dialog.turbo_stream.erb
@@ -1,1 +1,1 @@
-<%= turbo_stream.update 'dialog', partial: 'dialog' %>
+<%= turbo_stream.replace 'modal', partial: 'dialog_form', layout: 'modal_change', locals: { production: @production } %>
