--- a/app/views/factory/admin/taxon/products/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/taxon/products/_base/_index_thead.html.erb
@@ -1,6 +1,7 @@
 <th>
   <p><%= Factory::Product.human_attribute_name(:name) %></p>
 </th>
+<th><%= Factory::Product.human_attribute_name(:base_price) %></th>
 <th><%= Factory::Production.human_attribute_name(:name) %></th>
 <th><%= Factory::Production.human_attribute_name(:stock) %></th>
 <th><%= Factory::Production.human_attribute_name(:price) %></th>
