product parts count > 0

--- a/app/views/application/_production_cart.html+phone.erb
+++ b/app/views/application/_production_cart.html+phone.erb
@@ -1,5 +1,5 @@
 <div id="product_cart_<%= model.product_id %>" class="level">
-<% if model.product.productions_count > 1 %>
+<% if model.product.productions_count > 1 || model.product.product_parts_count > 0 %>
   <% items = cart&.find_items(model.product.production_ids, dispatch: params[:dispatch].presence || current_organ.dispatch, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
   <% if items.present? %>
     <%= button_to({ controller: 'factory/productions', action: 'show', id: model.id, dispatch: params[:dispatch].presence || current_organ.dispatch }, class: 'button is-small is-rounded is-primary') do %>
