--- a/app/views/factory/productions/_show.html.erb
+++ b/app/views/factory/productions/_show.html.erb
@@ -1,4 +1,4 @@
-<% if @production.parts.present? || @production.product.product_parts_count > 0 %>
+<% if @production.parts.present? || @production.product.product_parts_count > 0 || @production.product_taxon.product_part_taxons_count.to_i > 0 %>
   <%= render partial: 'dialog_form', locals: { production: @production } %>
 <% else %>
   <%= render 'card_brothers' %>
