--- a/app/views/factory/productions/index.html+phone.erb
+++ b/app/views/factory/productions/index.html+phone.erb
@@ -26,9 +26,9 @@
     <%= render partial: 'production_cart', layout: 'production', collection: @productions, as: :model, locals: { cart: @cart, item_con: 'trade/my/items' } %>
     <% if @productions.blank? %>
       <%= render 'blank' %>
-    <% elsif @productions.total_pages <= @productions.current_page %>
+    <% elsif @products.total_pages <= @products.current_page %>
       <%= render 'no_more' %>
-    <% elsif @productions.total_pages > @productions.current_page %>
+    <% elsif @products.total_pages > @products.current_page %>
       <%= render 'loading' %>
       <%= render 'tip' %>
     <% end %>
