--- a/app/views/factory/admin/taxon/products/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/taxon/products/_base/_index_thead.html.erb
@@ -7,3 +7,4 @@
 <th><%= Factory::Production.human_attribute_name(:price) %></th>
 <th></th>
 <th></th>
+<th><%= Factory::Product.human_attribute_name(:published) %></th>
