--- a/app/views/factory/admin/taxon/products/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/taxon/products/_base/_index_tbody.html.erb
@@ -46,3 +46,9 @@
     <span class="pl-1"><%= model.fits_count %></span>
   <% end %>
 </td>
+<td>
+  <%= form_with theme: nil, model: model, scope: :product, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
+    <%= f.check_box :published, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
+    <label data-action="click->input#check"></label>
+  <% end %>
+</td>
