--- a/app/views/factory/productions/show.html+phone.erb
+++ b/app/views/factory/productions/show.html+phone.erb
@@ -42,15 +42,7 @@
   </div>
 </div>
 
-<% if @production.same_parts.present? %>
-  <div class="box is-border">
-  <% @production.same_parts.includes(:product_taxon).group_by(&:product_taxon).each do |part_taxon, parts| %>
-    <%= render partial: 'product_part_taxon', locals: { part_taxon: part_taxon, parts: parts } %>
-  <% end %>
-  </div>
-<% elsif @production.brothers.enabled.count > 1 %>
-  <%= render 'brothers' %>
-<% end %>
+<%= render 'show' %>
 
 <% if @production.product.images.present? %>
 <div class="box is-border">
