--- a/app/views/factory/admin/taxon/products/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/taxon/products/_base/_index_tbody.html.erb
@@ -8,7 +8,7 @@
 </td>
 <td><%= model.base_price.to_money.format.html_safe %></td>
 <td>
-<% model.productions.each do |production| %>
+<% model.productions[0..2].each do |production| %>
   <p>
     <span><%= production.name %></span>
     <% if production.enabled %>
@@ -18,12 +18,12 @@
 <% end %>
 </td>
 <td>
-<% model.productions.each do |production| %>
-  <p><%= production.stock %></p>
+<% model.productions[0..2].each do |production| %>
+  <p><%= production.stock.to_d %></p>
 <% end %>
 </td>
 <td>
-<% model.productions.each do |production| %>
+<% model.productions[0..2].each do |production| %>
   <p><%= production.price.to_money.format.html_safe %></p>
 <% end %>
 </td>
