--- a/app/views/factory/productions/_base/_product_part_taxon.html.erb
+++ b/app/views/factory/productions/_base/_product_part_taxon.html.erb
@@ -1,11 +1,9 @@
-<div class="weui-media-box weui-media-box_text">
-  <div class="weui-media-box__title">
+<div class="box mt-3">
+  <strong>
     <span><%= product_part_taxon.name %></span>
-    <span class="weui-panel__extra size-7">
-      <span><%= product_part_taxon.select_str %></span>
-    </span>
-  </div>
-  <div class="pt-4" data-controller="custom" data-custom-only-value="<%= product_part_taxon.only_one? %>">
+    <span class="size-7"><%= product_part_taxon.select_str %></span>
+  </strong>
+  <div data-controller="custom" data-custom-only-value="<%= product_part_taxon.only_one? %>" class="pt-4">
   <% product_parts.each do |product_part| %>
     <label class="button is-small mb-2 <%= @production.part_ids.include?(product_part.part_id) ? 'is-success' : 'is-light' %>" for="part_<%= product_part.part_id %>"<%= product_part_taxon.disabled?(@production.part_ids, product_part.part_id) ? ' disabled' : '' %>>
       <span><%= product_part.part.name %></span>
