--- a/app/views/factory/productions/_base/_product_part_taxon.html.erb
+++ b/app/views/factory/productions/_base/_product_part_taxon.html.erb
@@ -11,7 +11,7 @@
         <span class="ml-1"><%= product_part.part.price.to_money.format.html_safe %></span>
       <% end %>
       <% if product_part_taxon.cancelable?(@production.part_ids, product_part.part_id) %>
-        <i class="fa-solid fa-xmark"></i>
+        <i class="fa-solid fa-xmark ml-1"></i>
       <% end %>
       <%= hidden_field_tag 'part_ids[]', product_part.part_id, form: 'edit_custom', data: { part_taxon_id: product_part.part.product_taxon_id }, id: nil if @production.part_ids.include?(product_part.part_id) && product_part_taxon.disabled?(@production.part_ids, product_part.part_id) %>
       <%= check_box_tag 'part_ids[]', product_part.part_id, @production.part_ids.include?(product_part.part_id), disabled: product_part_taxon.disabled?(@production.part_ids, product_part.part_id), data: { action: 'custom#toggle', part_taxon_id: product_part_taxon.part_taxon_id }, class: 'weui-check', id: "part_#{product_part.part_id}", form: 'edit_custom' %>
