--- a/app/views/factory/productions/show.html+phone.erb
+++ b/app/views/factory/productions/show.html+phone.erb
@@ -42,7 +42,9 @@
   </div>
 </div>
 
-<%= render 'show' %>
+<div class="mx-3 mb-3">
+  <%= render 'show' %>
+</div>
 
 <% if @production.product.images.present? %>
 <div class="box is-border">
