--- a/app/views/factory/in/productions/_base/_index_tbody.html.erb
+++ b/app/views/factory/in/productions/_base/_index_tbody.html.erb
@@ -17,11 +17,7 @@
 </td>
 <td><%= model.price.to_money.format.html_safe %></td>
 <td class="has-text-centered">
-<% if item = @cart.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
-  <%= render partial: 'cart', locals: { model: model, item_con: 'trade/in/items', item: item, cart: @cart } %>
-<% else %>
-  <%= render partial: 'add_cart', locals: { model: model, item_con: 'trade/in/items', cart: @cart } %>
-<% end %>
+  <%= render partial: 'cart', locals: { item_con: 'trade/in/items', item: @cart.init_cart_item(params, good_id: model.id), cart: @cart } %>
 </td>
 <td>
   <%= button_to({ controller: 'admin/productions', action: 'show', product_id: model.product_id, id: model.id }, aria: { label: t('factory.admin.productions.show.title') }, class: 'button is-small is-rounded is-light') do %>
