--- a/app/views/factory/productions/_index/_card.html.erb
+++ b/app/views/factory/productions/_index/_card.html.erb
@@ -9,10 +9,8 @@
     <%= link_to model.name, { action: 'show', id: model.id } %>
   </div>
   <div class="card-footer py-2">
-  <% if item = @cart && @cart.find_item(good_id: model.id) %>
-    <%= render partial: 'cart', locals: { cart: @cart, item_con: item_con, item: item } %>
-  <% else %>
-    <%= render partial: 'add_cart', locals: { cart: @cart, model: model, item_con: item_con } %>
+  <% if @cart %>
+    <%= render partial: 'cart', locals: { cart: @cart, item_con: item_con, item: @cart.init_cart_item(params, good_id: model.id) } %>
   <% end %>
   </div>
 </div>
