--- a/app/views/factory/in/items/update_assign.turbo_stream.erb
+++ b/app/views/factory/in/items/update_assign.turbo_stream.erb
@@ -1,2 +1,2 @@
-<%= turbo_stream.replace "cart_#{@item.cart_identity}", partial: 'purchase_cart_assign', locals: { cart: @item.current_cart, item: @item, item_con: controller_path } %>
+<%= turbo_stream.replace @item.cart_identity, partial: 'purchase_cart_assign', locals: { cart: @item.current_cart, item: @item, item_con: controller_path } %>
 <%= turbo_stream.remove 'modal' %>
