--- a/app/views/factory/admin/taxon/products/_new_modal_form.html.erb
+++ b/app/views/factory/admin/taxon/products/_new_modal_form.html.erb
@@ -7,7 +7,7 @@
     <%= render 'error_messages', target: f.object %>
     <%= render partial: 'form', locals: { f: f } %>
   </section>
-  <footer class="modal-card-foot justify-content-center">
+  <footer class="modal-card-foot">
     <%= f.submit %>
   </footer>
 <% end %>
