--- a/app/views/factory/productions/_base/_modal_foot.html.erb
+++ b/app/views/factory/productions/_base/_modal_foot.html.erb
@@ -1,15 +1,3 @@
 <footer class="modal-card-foot flex-direction-column">
-  <% item = @cart.init_cart_item(params, good_id: @production.id) %>
-  <%= render partial: 'new_cart', locals: { model: @production, item_con: 'trade/my/items', item: item, cart: @cart } %>
-  <div class="flex justify-content-space-between mt-2 is-fullwidth">
-    <% if item.persisted? %>
-      <%= button_to({ controller: 'trade/my/items', id: item.id, action: 'destroy' }, method: :delete, params: { current_cart_id: @cart.id }, class: 'button is-small is-rounded is-danger') do %>
-        <i class="fa-solid fa-circle-xmark"></i>
-        <span class="ml-1">移出购物车</span>
-      <% end %>
-    <% else %>
-      <span></span>
-    <% end %>
-    <button type="submit" name="commit" value="xx" form="new_item" class="button is-small is-rounded is-success ml-3">加入购物车</button>
-  </div>
+  <%= render partial: 'new_cart', locals: { item: @cart.init_cart_item(params, good_id: @production.id), item_con: 'trade/my/items', cart: @cart } %>
 </footer>
