--- a/app/views/factory/productions/_base/_modal_foot.html.erb
+++ b/app/views/factory/productions/_base/_modal_foot.html.erb
@@ -1,3 +1,6 @@
 <footer class="modal-card-foot flex-direction-column">
-  <%= render partial: 'cart_new', locals: { item: @cart.init_cart_item(params, good_id: @production.id), item_con: 'trade/my/items', cart: @cart } %>
+  <div class="flex justify-content-space-between is-fullwidth">
+    <div class="color-danger"><%= @production.price.to_money.format.html_safe %></div>
+    <%= render partial: 'cart_new', locals: { item: @cart.init_cart_item(params, good_id: @production.id), item_con: 'trade/my/items', cart: @cart } %>
+  </div>
 </footer>
