--- a/app/views/factory/productions/_base/_modal_foot.html.erb
+++ b/app/views/factory/productions/_base/_modal_foot.html.erb
@@ -1,18 +1,5 @@
 <footer class="modal-card-foot flex-direction-column">
-  <div class="is-fullwidth">
-  <% @cart.find_items(@production.brother_ids, good_type: @production.base_class_name, **params.permit!).each do |item| %>
-    <div data-id="<%= item.id %>">
-      <span><%= item.good.name %></span>
-      <ul class="media-info display-inline-flex">
-        <% item.good.parts.group_by(&->(i){ i.product_taxon_id }).each do |_, parts| %>
-          <% parts.each_with_index do |part, _| %>
-            <li><%= part.name %></li>
-          <% end %>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  </div>
+  <%= render partial: 'product_summary', locals: { production: @production, cart: @cart, options: params.permit(:dispatch) } %>
   <div class="flex justify-content-space-between is-fullwidth">
     <div class="color-danger"><%= @production.price.to_money.format.html_safe %></div>
     <%= render partial: 'cart_new', locals: { item: @cart.init_cart_item(params, good_id: @production.id), item_con: 'trade/my/items', cart: @cart } %>
