--- a/app/views/factory/productions/_dialog_form.html.erb
+++ b/app/views/factory/productions/_dialog_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_with model: production, url: { action: 'create_dialog' }, id: 'edit_custom' do |f| %>
+  <%= hidden_field_tag :dispatch, params[:dispatch] %>
 <% end %>
 <%# render 'factory/productions/_base/figure' if production.product.covers.length > 0 %>
 
