simple render cart

--- a/app/views/factory/productions/show.html.erb
+++ b/app/views/factory/productions/show.html.erb
@@ -9,10 +9,8 @@
       <span><%= @production.price.to_money.format.html_safe %></span>
     </div>
     <div class="flex mt-1">
-      <% if item = @cart&.find_item(good_id: @production.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
-        <%= render partial: 'cart', locals: { model: @production, item_con: 'trade/my/items', item: item, cart: @cart } %>
-      <% else %>
-        <%= render partial: 'add_cart_button', locals: { model: @production, item_con: 'trade/my/items' } %>
+      <% if @cart %>
+        <%= render partial: 'cart', locals: { item: @cart.init_cart_item(params, good_id: @production.id), item_con: 'trade/my/items', cart: @cart } %>
       <% end %>
       <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'button is-small is-primary is-radius') do %>
         <span class="pr-1"><%= t('trade.my.carts.show.title') %></span>
