--- a/app/views/application/_production_cart.html+phone.erb
+++ b/app/views/application/_production_cart.html+phone.erb
@@ -1,14 +1,11 @@
-<div id="product_cart_<%= model.product_id %>" class="level">
+<div id="product_cart_<%= model.product_id %>" class="level fa-weui-badge">
 <% if model.product.productions_count > 1 || model.product.product_parts_count > 0 || model.product_taxon&.product_part_taxons_count.to_i > 0 %>
-  <% items = cart&.find_items(model.product.production_ids, dispatch: params[:dispatch].presence || current_organ.dispatch, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
+  <% items = cart&.find_items(model.product.production_ids, dispatch: params[:dispatch].presence || current_organ.dispatch, **params.permit(:produce_on, :scene_id)) %>
+  <%= button_to({ controller: 'factory/productions', action: 'show', id: model.id, dispatch: params[:dispatch].presence || current_organ.dispatch }, class: 'button is-small is-rounded is-primary') do %>
+    <span>选规格</span>
+  <% end %>
   <% if items.present? %>
-    <%= button_to({ controller: 'factory/productions', action: 'show', id: model.id, dispatch: params[:dispatch].presence || current_organ.dispatch }, class: 'button is-small is-rounded is-primary') do %>
-      <span>已选 <%= items.size %> 规格</span>
-    <% end %>
-  <% else %>
-    <%= button_to({ controller: 'factory/productions', action: 'show', id: model.id, dispatch: params[:dispatch].presence || current_organ.dispatch }, class: 'button is-small is-rounded is-primary') do %>
-      <span>选规格</span>
-    <% end %>
+    <span class="weui-badge"><%= items.size %></span>
   <% end %>
 <% else %>
   <% if cart %>
