--- a/app/views/factory/agent/productions/_index/_card.html+pad.erb
+++ b/app/views/factory/agent/productions/_index/_card.html+pad.erb
@@ -4,8 +4,6 @@
     <%= link_to model.name, { action: 'show', id: model.id } %>
   </div>
   <div class="card-footer py-2">
-  <% if @cart %>
-    <%= render partial: 'cart', locals: { cart: @cart, item_con: item_con, item: @cart.init_cart_item(params, good_id: model.id) } %>
-  <% end %>
+    <%= yield %>
   </div>
 </div>
