--- a/app/views/factory/agent/productions/index.html.erb
+++ b/app/views/factory/agent/productions/index.html.erb
@@ -1,6 +1,6 @@
 <div class="column">
   <div class="cards is-4">
-    <%= render partial: 'card', collection: @productions, as: :model, locals: { item_con: 'trade/agent/items' } %>
+    <%= render partial: 'production_cart', layout: 'card', collection: @productions, as: :model, locals: { cart: @cart, item_con: 'trade/agent/items' } %>
   </div>
 </div>
 <div class="column is-narrow">
