--- a/app/views/factory/agent/productions/_index/_card.html+pad.erb
+++ b/app/views/factory/agent/productions/_index/_card.html+pad.erb
@@ -1,8 +1,8 @@
 <div class="card">
-  <div class="card-content has-text-centered">
-    <h2 class="title color-danger"><%= model.price.to_money.format.html_safe %></h2>
-    <%= link_to model.name, { action: 'show', id: model.id } %>
-  </div>
+  <%= button_to({ action: 'show', id: model.id }, class: 'p-3 is-fullwidth is-fullheight', form: { class: 'card-content p-0' }) do %>
+    <h2 class="title has-text-left"><%= model.name %></h2>
+    <p class="color-danger has-text-right"><%= model.price.to_money.format.html_safe %></p>
+  <% end %>
   <div class="card-footer py-2">
     <%= yield %>
   </div>
