--- a/app/views/admin/_factory_simple_nav.html.erb
+++ b/app/views/admin/_factory_simple_nav.html.erb
@@ -4,7 +4,7 @@
       <i class="fa-solid fa-fw fa-store"></i>
       <span><%= t('factory.admin.title') %></span>
     </div>
-    <%= link_to({ controller: 'factory/admin/organs', action: 'show' }, aria: { label: '设置' }) do %>
+    <%= link_to({ controller: 'factory/admin/home' }, aria: { label: '设置' }) do %>
       <i class="fa-solid fa-cog"></i>
     <% end %>
   </div>
@@ -12,8 +12,6 @@
     <%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'factory/admin/product_taxons' }, data: { turbo_frame: 'body', action: 'menu#enter' }, class: active_helper(controllers: ['taxon/products', 'product_taxons', 'product_part_taxons', 'productions', 'part_providers', 'production_plans', 'production_items'], active: 'is-active') %>
     <%= link_to t('factory.admin.products.index.title'), { controller: 'factory/admin/products' }, data: { turbo_frame: 'body', action: 'menu#enter' }, class: active_helper(controllers: ['products', 'product_taxons', 'product_part_taxons', 'productions', 'part_providers', 'production_plans', 'production_items'], active: 'is-active') %>
     <%= link_to t('factory.admin.produce_on.index.title'), { controller: 'factory/admin/produce_on' }, data: { turbo_frame: 'body', action: 'menu#enter' }, class: active_helper(controllers: 'produce_on', active: 'is-active') %>
-    <%= link_to t('factory.admin.scenes.index.title'), { controller: 'factory/admin/scenes' }, class: active_helper(controllers: ['scenes', 'produce_plans'], active: 'is-active') %>
-    <%= link_to t('factory.admin.provides.index.title'), { controller: 'factory/admin/provides' }, class: active_helper(controllers: ['provides'], active: 'is-active') %>
     <%= link_to t('factory.in.productions.index.title'), { controller: 'factory/in/productions' }, data: { turbo_frame: 'body', action: 'menu#enter' }, class: active_helper(controllers: ['productions'], active: 'is-active') %>
   </div>
 </div>
