--- a/app/views/admin/_factory_simple_nav.html.erb
+++ b/app/views/admin/_factory_simple_nav.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="menu empty" class="<%= active_helper(modules: ['factory/admin', 'factory/in'], active: 'menu ex-accordion is-active', item: 'menu ex-accordion is-active') %>">
-  <div class="menu-label flex justify-content-space-between">
+  <div class="menu-label">
     <div>
       <i class="fa-solid fa-fw fa-store"></i>
       <span><%= t('factory.admin.title') %></span>
