--- a/app/views/factory/admin/product_taxons/_index/_filter_form.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_filter_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with theme: 'search', model: Factory::ProductTaxon.new do |f| %>
+<%= form_with theme: 'search', model: Factory::ProductTaxon.new, data: { switch_target: 'src' } do |f| %>
   <div class="field-body">
     <%= f.text_field :name, autocomplete: 'off' %>
     <div class="field is-narrow">
