--- a/app/views/factory/admin/base/_production_bar.html.erb
+++ b/app/views/factory/admin/base/_production_bar.html.erb
@@ -1,4 +1,5 @@
-<div class="tabs is-centered is-boxed mb-3">
+<h2 class="title has-text-centered"><%= @production.title %></h2>
+<div class="tabs is-centered mb-3">
   <ul>
     <li class="<%= active_helper(productions: ['show', 'edit'], active: 'is-active') %>">
       <%= link_to t('.productions.show.title'), { controller: 'factory/admin/productions', action: 'show', product_id: @production.product_id, id: @production.id } %>
