--- a/app/views/factory/admin/product_taxons/_edit/_edit_modal_form.html.erb
+++ b/app/views/factory/admin/product_taxons/_edit/_edit_modal_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @product_taxon, url: { action: 'update', **params.permit(:factory_taxon_id) }, class: 'modal-card' do |f| %>
+<%= form_with theme: 'modal', model: @product_taxon, url: { action: 'update', **params.permit(:factory_taxon_id) } do |f| %>
   <header class="modal-card-head">
     <p class="modal-card-title"><%= t('.title') %></p>
     <button type="button" data-action="modal#close" class="delete"></button>
