--- a/app/views/factory/admin/base/_product_taxon_bar.html.erb
+++ b/app/views/factory/admin/base/_product_taxon_bar.html.erb
@@ -1,4 +1,6 @@
-<h2 class="title text-centered"><%= @product_taxon.name %></h2>
+<h2 class="title text-centered">
+  <%= @product_taxon.name %>
+</h2>
 
 <div class="tabs is-centered mb-3">
   <ul>
