--- a/app/views/factory/admin/product_part_taxons/_new_modal_form.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_new_modal_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @product_part_taxon, url: { action: 'create' }, data: { controller: 'equal' }, class: 'modal-card' do |f| %>
+<%= form_with theme: 'modal', model: @product_part_taxon, url: { action: 'create' }, data: { controller: 'equal' } do |f| %>
   <header class="modal-card-head">
     <p class="modal-card-title"><%= t('.title') %></p>
     <button type="button" data-action="modal#close" class="delete"></button>
@@ -10,7 +10,5 @@
     <%= f.number_field :min_select, step: 1, data: { action: 'equal#update' } %>
     <%= f.number_field :max_select, step: 1, data: { equal_target: 'goal' } %>
   </section>
-  <footer class="modal-card-foot">
-    <%= f.submit %>
-  </footer>
+  <%= f.submit %>
 <% end %>
