--- a/app/views/factory/admin/products/_buy/_index_tfoot.html.erb
+++ b/app/views/factory/admin/products/_buy/_index_tfoot.html.erb
@@ -1,4 +1,4 @@
-<div class="level sticky-bottom">
+<div class="level box sticky-bottom">
   <div class="level-left">
     <div id="cart_nav">
       <%= link_to({ controller: 'trade/in/carts', action: 'show', id: @cart.id }) do %>
