--- a/app/views/factory/in/home/_index/_index_column.html.erb
+++ b/app/views/factory/in/home/_index/_index_column.html.erb
@@ -1,5 +1,8 @@
 <div class="fixed-grid has-6-cols">
   <div class="grid">
+    <%= link_to({ controller: 'product_taxons' }, class: 'cell button is-fullwidth') do %>
+      <span><%= t('.product_taxons.index.title') %></span>
+    <% end %>
     <%= link_to({ controller: 'productions' }, class: 'cell button is-fullwidth') do %>
       <span><%= t('.productions.index.title') %></span>
     <% end %>
