--- a/app/views/factory/in/product_taxons/index.html.erb
+++ b/app/views/factory/in/product_taxons/index.html.erb
@@ -1,5 +1,5 @@
 <%= render layout: 'index_table' do %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @factory_taxons, as: :model %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @product_taxons, as: :model %>
 <% end %>
 
-<%= paginate @factory_taxons %>
+<%= paginate @product_taxons %>
